add kotlin dependency and sync vjson