@@ -1,3 +1,12 @@
+compileJava {
+    doFirst {
+        options.compilerArgs << '--module-path' << classpath.asPath
+    }
+    options.compilerArgs << '--add-modules' << [
+            'kotlin.stdlib',
+    ].join(',')
+}
+
 jar {
     archiveName "vproxy-base.jar"
 }
